<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_rrt</name>
  <version>0.1.0</version>
  <description>The turtlebot_rrt package</description>
  <maintainer email="arpitdec5@gmail.com">Arpit Aggarwal</maintainer>
  <maintainer email="sbajpai@umd.edu">Shantam Bajpai</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslib</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>lcov</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>lcov</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rostest</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>lcov</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
